@@ -6,7 +6,7 @@
  * Plugin that adds a new button to the mailbox toolbar
  * to move messages to a (user selectable) archive folder.
  *
- * @version 3.0
+ * @version 3.1
  * @license GNU GPLv3+
  * @author Andre Rodier, Thomas Bruederli, Aleksander Machniak
  */
@@ -188,7 +188,7 @@ class archive extends rcube_plugin
                             . $delimiter . $rcmail->format_date($message->timestamp, 'm');
                         break;
 
-                    case 'thunderbirdmonth':
+                    case 'tbmonth':
                         $subfolder = $rcmail->format_date($message->timestamp, 'Y')
                             . $delimiter . $rcmail->format_date($message->timestamp, 'Y')
                             . '-' . $rcmail->format_date($message->timestamp, 'm');
@@ -416,7 +416,7 @@ class archive extends rcube_plugin
             $archive_type->add($this->gettext('none'), '');
             $archive_type->add($this->gettext('archivetypeyear'), 'year');
             $archive_type->add($this->gettext('archivetypemonth'), 'month');
-            $archive_type->add($this->gettext('archivetypethunderbirdmonth'), 'thunderbirdmonth');
+            $archive_type->add($this->gettext('archivetypetbmonth'), 'tbmonth');
             $archive_type->add($this->gettext('archivetypesender'), 'sender');
             $archive_type->add($this->gettext('archivetypefolder'), 'folder');
 
