@@ -27,7 +27,7 @@ $labels['settingstitle'] = 'Archive';
 $labels['archivetype'] = 'Divide archive by';
 $labels['archivetypeyear'] = 'Year (e.g. Archive/2012)';
 $labels['archivetypemonth'] = 'Month (e.g. Archive/2012/06)';
-$labels['archivetypethunderbirdmonth'] = 'Month - Thunderbird compatible (e.g. Archive/2012/2012-06)';
+$labels['archivetypetbmonth'] = 'Month - Thunderbird compatible (e.g. Archive/2012/2012-06)';
 $labels['archivetypefolder'] = 'Original folder';
 $labels['archivetypesender'] = 'Sender email';
 $labels['unkownsender'] = 'unknown';
